force-app/main/default/objects/Sell_items__c/Sell_items__c.object-meta.xml
<CustomObject>
    <label>Sell items</label>
    <nameField>
        <label>Sell items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sell itemes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>