force-app/main/default/objects/Sell_items__c/fields/Merchandise__c.field-meta.xml
<CustomField>
    <fullName>Merchandise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchandise</label>
    <referenceTo>Merchandise__c</referenceTo>
    <relationshipLabel>Sell itemes</relationshipLabel>
    <relationshipName>Sell_itemes</relationshipName>
    <type>Lookup</type>
</CustomField>