force-app/main/default/objects/Sell_items__c/fields/Sell_Items_Desc__c.field-meta.xml
<CustomField>
    <fullName>Sell_Items_Desc__c</fullName>
    <label>Sell Items Desc</label>
    <type>TextArea</type>
</CustomField>