force-app/main/default/objects/Sell_items__c/fields/Sell_Items_Price__c.field-meta.xml
<CustomField>
    <fullName>Sell_Items_Price__c</fullName>
    <label>Sell Items Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>