force-app/main/default/objects/Sell_items__c/fields/Sell_Items_Stocks__c.field-meta.xml
<CustomField>
    <fullName>Sell_Items_Stocks__c</fullName>
    <label>Sell Items Stocks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>