force-app/main/default/objects/Sell_items__c/validationRules/stocks_management.validationRule-meta.xml
<ValidationRule>
    <fullName>stocks_management</fullName>
    <active>false</active>
    <errorConditionFormula>Merchandise__r.Merchandise_Stocks__c &lt;  Sell_Items_Stocks__c</errorConditionFormula>
    <errorDisplayField>Sell_Items_Stocks__c</errorDisplayField>
    <errorMessage>Sorry, Out of stocks</errorMessage>
</ValidationRule>